# production_data_platform

./: .gitignore  README.md  demo_predictions.py  docker-compose.yml  pyproject.toml
api/: predict_api.py
data/: generate_data.py
events/: producer.py
feast/feature_repo/: feature_store.py  feature_store.yaml
feature_store/: feature_store.yaml  features.py  setup_feast.py
features/: compute_features.py  realtime_features.py
model/: train_model.py
server/: app.py
